bluec-tests/tests/invalid/functions/call_expression_cast_to_short.c
int main(void) {
    return ((short)1)();
}